# coursepack

./: .gitignore  ARCHITECTURE.md  README.md  config.json  pyproject.toml  syllabus.md  toc.json
coursepack/: planner.py  toc_extractor.py
