[project]
name = "coursepack"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayush",email = "ayushthapa026@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "icalendar (>=6.3.2,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "click (>=8.3.1,<9.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "tabulate (>=0.9.0,<1.0.0)",
    "questionary (>=2.0.0,<3.0.0)",
    "google-genai>=1.52.0",
    "pdflatex>=0.1.3",
    "python-dotenv>=1.0.0",
]

[tool.poetry.scripts]
coursepack = "coursepack.planner:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
